// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`native <Text /> when Text with newline children rendered match snapshot 1`] = `
<Text
  style={
    Object {
      "color": "#101010",
      "fontFamily": "Pretendard",
      "fontSize": 34,
      "fontWeight": "700",
      "lineHeight": 44,
    }
  }
>
  Some
  <Text
    style={Object {}}
  >
    

  </Text>
  Thing
</Text>
`;

exports[`native <Text /> when title1 Text rendered match snapshot 1`] = `
<Text
  style={
    Object {
      "color": "#101010",
      "fontFamily": "Pretendard",
      "fontSize": 34,
      "fontWeight": "700",
      "lineHeight": 44,
    }
  }
>
  Something
</Text>
`;
